--- a/safe-plugin/foundry.toml
+++ b/safe-plugin/foundry.toml
@@ -5,7 +5,8 @@ libs = ["lib"]
 
 remappings = [
     '@safe-global/safe-core-protocol=lib/safe-core-protocol',
-    '@openzeppelin/contracts=lib/openzeppelin-contracts/contracts'
+    '@openzeppelin/contracts=lib/openzeppelin-contracts/contracts',
+    '@noir-zk=../noir-zk'
     ]
 
 
